@@ -1,10 +1,10 @@
 package cricket.merstham.graphql.helpers;
 
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
 
 import java.security.Principal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class UserHelper {
     public static String getSubject(Principal principal) {
@@ -19,8 +19,6 @@ public class UserHelper {
 
     public static List<String> getRoles(Principal principal) {
         var user = ((JwtAuthenticationToken) principal);
-        return user.getAuthorities().stream()
-                .map(a -> a.getAuthority())
-                .collect(Collectors.toList());
+        return user.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList();
     }
 }
